# spack

./: .gitignore  .prettierignore  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LOG.md  README.md  build.mts  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.mts  release.mts  response.json  rust-toolchain.toml  rustc-ice-2025-10-20T02_51_07-37709.txt  rustc-ice-2025-10-22T02_31_22-3156.txt  rustc-ice-2025-10-23T08_51_15-3106.txt  rustfmt.toml  setup.mts  snapshot-serializer.mts  test-extends.json  tsconfig.json  vitest.config.mts  x.mjs
.cargo/: config.toml
.claude/: mcp-config.json  plan.md  settings.json
.claude/agents/: cpp-pro.md  frontend-developer.md  rust-engineer.md  tooling-engineer.md
.claude/commands/: commit.md
.claude/docs/: architecture.md  development.md  rust-best-practices.md  snapshot-serializers.md  tech-stack.md
.claude/docs/rspack/: 01-核心模块.md  02-构建器模块.md  03-绑定接口模块.md  04-插件生态系统.md  05-工具和辅助模块.md  README.md
.claude/skills/rust-best-practices-guide/: Skill.md
.github/workflows/: cross-platform-ci.yml  debug.yml  release.yml  reusable-build-build.yml  reusable-cargo-test.yml  reusable-napi-build.yml  reusable-napi-publish.yml  reusable-node-test.yml  sync-rspack-tag.yml
.zed/: settings.json
crates/binding/: Cargo.toml  binding.d.ts  binding.js  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/binding/npm/darwin-arm64/: README.md  package.json
crates/binding/npm/darwin-x64/: README.md  package.json
crates/binding/npm/linux-arm64-gnu/: README.md  package.json
crates/binding/npm/linux-arm64-musl/: README.md  package.json
crates/binding/npm/linux-x64-gnu/: README.md  package.json
crates/binding/npm/linux-x64-musl/: README.md  package.json
crates/binding/npm/win32-arm64-msvc/: README.md  package.json
crates/binding/npm/win32-x64-msvc/: README.md  package.json
crates/binding/scripts/: build.js
crates/binding/src/: lib.rs
crates/binding/src/raws/: mod.rs  raw_bundle_analyzer.rs  raw_case_sensitive_paths.rs  raw_css_modules_dts_loader.rs  raw_deadcode.rs  raw_demo.rs  raw_demo_loader.rs  raw_duplicate_dependency.rs  raw_oxlint.rs  raw_oxlint_loader.rs  raw_style_loader.rs  raw_unified.rs
crates/node_binding/: binding.d.ts  binding.js  package.json
crates/node_binding/scripts/: build.js
crates/rspack_binding_api/: Cargo.toml
crates/spack_binding_builder_macros/: Cargo.toml
crates/spack_binding_builder_macros/src/: lib.rs  plugin_register.rs  register_plugin.rs
crates/spack_builtin_loader/: Cargo.toml
crates/spack_builtin_loader/src/: lib.rs  loader.rs  loader_cache.rs  module_helper.rs  plugin.rs
crates/spack_builtin_loader/src/css_loader/: css-loader-analysis.md  mod.rs
crates/spack_builtin_loader/src/css_modules_dts_loader/: mod.rs
crates/spack_builtin_loader/src/css_modules_ts_loader/: mod.rs
crates/spack_builtin_loader/src/lightningcss_loader/: mod.rs  opts.rs  px_to_rem.rs  raw.rs  raws.rs
crates/spack_builtin_loader/src/lightningcss_loader/visitors/: mod.rs  px_to_rem.rs
crates/spack_builtin_loader/src/oxlint_loader/: environments.rs  mod.rs  restricted.rs
crates/spack_builtin_loader/src/style_loader/: mod.rs
crates/spack_builtin_loader/src/style_loader/runtime/: injectStylesIntoLinkTag.js  injectStylesIntoStyleTag.js
crates/spack_loader_demo/: Cargo.toml
crates/spack_loader_demo/src/: lib.rs  loader.rs  runtime_module.rs  vp.rs
crates/spack_loader_demo/src/virtual_modules/: mod.rs
crates/spack_loader_style/: Cargo.toml  a.md
crates/spack_loader_style/src/: code_template.rs  css_loader.rs  hello.rs  inject_type.rs  lib.rs  tem.rs  (+8 more)
crates/spack_macros/: Cargo.toml
crates/spack_macros/src/: lib.rs  plugin_registry.rs  threadsafe_callback.rs
crates/spack_plugin_bundle_analyzer/: ARCHITECTURE.md  ASSET_FIELDS.md  CHUNK_FIELDS.md  Cargo.toml  ENHANCEMENT_IDEAS.md  FIELD_ADDITIONS_ANALYSIS.md  FRONTEND_BUILD_TREE.md  GRAPH_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MODULE_FIELDS.md  MODULE_PACKAGE_ASSOCIATION.md  PACKAGE_FIELDS.md  PACKAGE_UNIQUENESS.md  PLAN_B_ANALYSIS.md  TREE_VIEW_RUST_DESIGN.md  UI_ENTRY_POINT.md  UI_TREE_VIEW.md  功能设计.md
crates/spack_plugin_case_sensitive_paths/: Cargo.toml
crates/spack_plugin_case_sensitive_paths/src/: import_finder.rs  lib.rs  options.rs  opts.rs
crates/spack_plugin_deadcode/: Cargo.toml
crates/spack_plugin_deadcode/src/: lib.rs
crates/spack_plugin_demo/: Cargo.toml
crates/spack_plugin_demo/src/: lib.rs
crates/spack_plugin_duplicate_dependency/: Cargo.toml
crates/spack_plugin_duplicate_dependency/src/: lib.rs  options.rs  opts.rs  resp.rs  response.rs
crates/spack_plugin_friendly_errors/: Cargo.toml
crates/spack_plugin_friendly_errors/src/: lib.rs
crates/spack_plugin_oxlint/: Cargo.toml
crates/spack_plugin_oxlint/src/: a.md  config.rs  lib.rs  lint_cache.rs  lint_runner.rs  plugin.rs
crates/spack_plugin_unified/: Cargo.toml
crates/spack_plugin_unified/src/: plugin.rs
customized/spack_plugin_case_sensitive_paths/: Cargo.toml
customized/spack_plugin_case_sensitive_paths/src/: import_finder.rs  lib.rs
customized/spack_plugin_duplicate_dependencies/: Cargo.toml
customized/spack_plugin_duplicate_dependency/: Cargo.toml
lint/: .oxlintrc.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/wasm32-wasi/: package.json
npm/win32-x64-msvc/: package.json
scripts/: build-npm.cjs  prerelease.mts  publish.mts
scripts/utils/: paths.mts
tests/: a.test.mts  bundle_analyzer.test.mts  case_sensitive.test.mts  css-loader.test.mts  css_module_dts_loader.test.mts  demo.test.mts  duplicate_dependency.test.mts  lightningcss.test.mts  oxlint-loader.test.mts  package.json  pnpm-lock.yaml  px2rem.test.mts  style-loader.test.mts  test_case.mts
tests/__snapshots__/: a.test.mts.snap  case_sensitive.test.mts.snap  duplicate_dependency.test.mts.snap
tests/utils/: flexible-assertions.mts  sort-result.mts
vitest/serializers/: deep-sort.mts  duplicate-dependency.mts  errors-array.mts  general-array.mts  index.mts  path-normalizer.mts
(+142 files in other folders)
