[workspace]
members  = ["crates/*"]
resolver = "2"


[workspace.package]
authors       = ["ityuany"]
categories    = ["bundler", "development-tools", "web-programming"]
documentation = "https://github.com/sheinsight/spack"
edition       = "2021"
homepage      = "https://github.com/sheinsight/spack"
license       = "MIT"
repository    = "https://github.com/sheinsight/spack"
version       = "0.1.0"

[workspace.dependencies]
rspack_binding_api            = "=0.5.4"
rspack_binding_build          = "=0.5.4"
rspack_binding_builder        = "=0.5.4"
rspack_binding_builder_macros = "=0.5.4"
rspack_cacheable              = "=0.5.4"
rspack_collections            = "=0.5.4"
rspack_core                   = "=0.5.4"
rspack_error                  = "=0.5.4"
rspack_fs                     = "=0.5.4"
rspack_hash                   = "=0.5.4"
rspack_hook                   = "=0.5.4"
rspack_javascript_compiler    = "=0.5.4"
rspack_loader_runner          = "=0.5.4"
rspack_napi                   = "=0.5.4"
rspack_paths                  = "=0.5.4"
rspack_util                   = "=0.5.4"

rspack_resolver = { features = ["package_json_raw_json_api", "yarn_pnp"], version = "0.6.0", default-features = false }

napi                = { version = "=3.2.3", features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-build          = { version = "=2.2.3" }
napi-derive         = { version = "=3.2.3", features = ["compat-mode"] }
napi-derive-backend = { version = "=2.1.3" }

swc_core = { version = "=38.0.0", default-features = false, features = [
  "parallel_rayon",
  "__base",
  "__ecma",
  "__common",
  "ecma_ast",
  "__parser",
  "__visit",
] }

derive_more = { version = "1.0.0", features = ["debug"] }
futures     = { version = "0.3.31" }
rustc-hash  = { version = "2.1.1" }

ustr = { package = "ustr-fxhash", version = "1.0.1", default-features = false }

package_json_parser = { version = "0.0.15" }
up_finder           = { version = "0.0.5" }

binding                           = { path = "crates/binding" }
spack_loader_demo                 = { path = "crates/spack_loader_demo" }
spack_macros                      = { path = "crates/spack_macros" }
spack_plugin_bundle_analyzer      = { path = "crates/spack_plugin_bundle_analyzer" }
spack_plugin_case_sensitive_paths = { path = "crates/spack_plugin_case_sensitive_paths" }
spack_plugin_demo                 = { path = "crates/spack_plugin_demo" }
spack_plugin_duplicate_dependency = { path = "crates/spack_plugin_duplicate_dependency" }

tracing            = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.19" }

serde      = { version = "1.0.210" }
serde_json = { version = "1.0.142" }

strum        = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }

tokio = { version = "1.42.0", default-features = false, features = ["rt", "rt-multi-thread"] }

proc-macro2 = { version = "1.0.97" }
quote       = { version = "1.0.40" }
syn         = { version = "2.0.105", features = ["full"] }

async-trait = { version = "0.1.88" }
byte-unit   = { version = "5.1" }
itertools   = { version = "0.14.0" }
miette      = { version = "7.6.0" }
pathdiff    = { version = "0.2.3" }
