[workspace]
members  = ["crates/*"]
resolver = "2"


[workspace.package]
authors       = ["ityuany"]
categories    = ["bundler", "development-tools", "web-programming"]
documentation = "https://github.com/sheinsight/spack"
edition       = "2024"
homepage      = "https://github.com/sheinsight/spack"
license       = "MIT"
repository    = "https://github.com/sheinsight/spack"
version       = "0.1.0"

[workspace.dependencies]
rspack_binding_api            = "=0.5.8"
rspack_binding_build          = "=0.5.8"
rspack_binding_builder        = "=0.5.8"
rspack_binding_builder_macros = "=0.5.8"
rspack_cacheable              = "=0.5.8"
rspack_collections            = "=0.5.8"
rspack_core                   = "=0.5.8"
rspack_error                  = "=0.5.8"
rspack_fs                     = "=0.5.8"
rspack_hash                   = "=0.5.8"
rspack_hook                   = "=0.5.8"
rspack_javascript_compiler    = "=0.5.8"
rspack_loader_runner          = "=0.5.8"
rspack_napi                   = "=0.5.8"
rspack_paths                  = "=0.5.8"
rspack_util                   = "=0.5.8"

rspack_resolver = { features = ["package_json_raw_json_api", "yarn_pnp"], version = "=0.6.3", default-features = false }

oxc = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v1.26.0", package = "oxc", features = [
  "semantic",
] }
oxc_linter = { git = "https://github.com/oxc-project/oxc.git", tag = "oxlint_v1.26.0", package = "oxc_linter" }

napi                = { version = "=3.5.2", features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-build          = { version = "=2.3.1" }
napi-derive         = { version = "=3.3.3", features = ["compat-mode"] }
napi-derive-backend = { version = "=2.1.3" }

lightningcss = { version = "1.0.0-alpha.67", default-features = false }

rkyv = { version = "=0.8.8", default-features = false, features = ["std", "bytecheck"] }

swc_core = { version = "=38.0.0", default-features = false, features = [
  "parallel_rayon",
  "__base",
  "__ecma",
  "__common",
  "ecma_ast",
  "__parser",
  "__visit",
] }

dashmap     = { version = "6.1.0" }
derive_more = { version = "1.0.0", features = ["debug"] }
futures     = { version = "0.3.31" }
rustc-hash  = { version = "2.1.1" }

ustr = { package = "ustr-fxhash", version = "1.0.1", default-features = false }

package_json_parser = { version = "0.0.15" }
up_finder           = { version = "0.0.5" }

binding                           = { path = "crates/binding" }
spack_builtin_loader              = { path = "crates/spack_builtin_loader" }
spack_macros                      = { path = "crates/spack_macros" }
spack_plugin_bundle_analyzer      = { path = "crates/spack_plugin_bundle_analyzer" }
spack_plugin_case_sensitive_paths = { path = "crates/spack_plugin_case_sensitive_paths" }
spack_plugin_demo                 = { path = "crates/spack_plugin_demo" }
spack_plugin_duplicate_dependency = { path = "crates/spack_plugin_duplicate_dependency" }
spack_plugin_friendly_errors      = { path = "crates/spack_plugin_friendly_errors" }
spack_plugin_oxlint               = { path = "crates/spack_plugin_oxlint" }
spack_plugin_unified              = { path = "crates/spack_plugin_unified" }

tracing            = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.19" }

# lightningcss = { version = "=1.0.0-alpha.67", default-features = false, features = ["serde"] }

serde      = { version = "1.0.210" }
serde_json = { version = "1.0.142" }

strum        = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }

tokio = { version = "1.42.0", default-features = false, features = ["rt", "rt-multi-thread"] }

proc-macro2 = { version = "1.0.97" }
quote       = { version = "1.0.40" }
syn         = { version = "2.0.105", features = ["full"] }

async-trait = { version = "0.1.88" }
byte-unit   = { version = "5.1" }
itertools   = { version = "0.14.0" }
miette      = { version = "7.6.0" }
pathdiff    = { version = "0.2.3" }

bitflags    = { version = "^2.9.4" }
ignore      = { version = "0.4.24" }
lazy_static = { version = "1.5.0" }
num-format  = { version = "0.4.4" }
owo-colors  = { version = "4.2.3" }
rayon       = { version = "1.11.0" }
sailfish    = { version = "0.10.0" }
tera        = { version = "1.20.0" }
