[package]
authors.workspace       = true
categories.workspace    = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "spack_builtin_loader"
repository.workspace    = true
version.workspace       = true

[lib]
test = false

[dependencies]
async-trait          = { workspace = true }
rspack_binding_api   = { workspace = true }
rspack_cacheable     = { workspace = true }
rspack_collections   = { workspace = true }
rspack_core          = { workspace = true }
rspack_error         = { workspace = true }
rspack_fs            = { workspace = true }
rspack_hash          = { workspace = true }
rspack_hook          = { workspace = true }
rspack_loader_runner = { workspace = true }
rspack_paths         = { workspace = true }
rspack_resolver      = { workspace = true }
rspack_util          = { workspace = true }

sailfish = { workspace = true }
tera     = { workspace = true }

tokio = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

oxc        = { workspace = true }
oxc_linter = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

strum        = { workspace = true }
strum_macros = { workspace = true }

lazy_static  = { workspace = true }
lightningcss = { workspace = true }
miette       = { workspace = true }
num-format   = { workspace = true }
once_cell    = { workspace = true }
owo-colors   = { workspace = true }
regex        = { workspace = true }
ustr         = { workspace = true }

[package.metadata.sailfish]
template_dir = "templates"
