[package]
authors.workspace       = true
categories.workspace    = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "spack_loader_demo"
repository.workspace    = true
version.workspace       = true

[lib]
test = false

[dependencies]
async-trait          = { workspace = true }
rspack_binding_api   = { workspace = true }
rspack_cacheable     = { workspace = true }
rspack_core          = { workspace = true }
rspack_error         = { workspace = true }
rspack_fs            = { workspace = true }
rspack_hook          = { workspace = true }
rspack_loader_runner = { workspace = true }
rspack_paths         = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

strum        = { workspace = true }
strum_macros = { workspace = true }

ustr = { workspace = true }
