[package]
authors.workspace       = true
categories.workspace    = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "spack_macros"
repository.workspace    = true
version.workspace       = true

[lib]
proc-macro = true

[dependencies]
rspack_binding_builder = { workspace = true }

proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
