[package]
authors.workspace       = true
categories.workspace    = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "spack_plugin_demo"
repository.workspace    = true
version.workspace       = true

[lib]
test = false

[dependencies]
rspack_core  = { workspace = true }
rspack_error = { workspace = true }
rspack_hook  = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

derive_more          = { workspace = true }
futures              = { workspace = true }
spack_builtin_loader = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
