[package]
name = "spack_plugin_duplicate_dependency"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rspack_binding_builder        = {workspace = true}
rspack_binding_builder_macros = {workspace = true}

rspack_core  = {workspace = true}
rspack_error = {workspace = true}
rspack_napi  = {workspace = true}

napi        = { workspace = true }
napi-derive = { workspace = true }
napi-derive-backend = { workspace = true }

[build-dependencies]
rspack_binding_build = { workspace = true }