[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
name                 = "spack_plugin_duplicate_dependency"
repository.workspace = true
version              = "0.1.0"

[lib]
test = false

[dependencies]
rspack_binding_builder        = { workspace = true }
rspack_binding_builder_macros = { workspace = true }
rspack_core                   = { workspace = true }
rspack_error                  = { workspace = true }
rspack_hook                   = { workspace = true }
rspack_javascript_compiler    = { workspace = true }


napi                = { workspace = true }
napi-derive         = { workspace = true }
napi-derive-backend = { workspace = true }

swc_core = { workspace = true }

futures = { workspace = true }

derive_more = { workspace = true }

package_json_parser = { workspace = true }
up_finder           = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
